--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,20 @@ spring.datasource.continue-on-error=true
 #
 #####
 
+# Server web port
+server.port=8443
+
+# Enable HTTPS support (only accept HTTPS requests)
+server.ssl.enabled=true
+
+# Alias that identifies the key in the key store
+server.ssl.key-alias=ems
+
+# Keystore location
+server.ssl.key-store=classpath:emscode-keystore.p12
+
+# Keystore password
+server.ssl.key-store-password=secret
+
+# Keystore format
+server.ssl.key-store-type=PKCS12
